feat: add production deployment config (Vercel + Render + Supabase)
- Add Spring Boot profiles: local (default) and prod
- Add application-local.yml and application-prod.yml
- Optimize Dockerfile for free-tier containers (JVM memory flags)
- Add render.yaml blueprint for Render.com deployment
- Add vercel.json for Vercel SPA routing
- Add .dockerignore files for backend and frontend
- Update .env.example files with production variables
- Add comprehensive DEPLOYMENT.md guide

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,15 @@
-DATABASE_URL=jdbc:postgresql://db:5432/peakpartner
+# === Local Development ===
+SPRING_PROFILES_ACTIVE=local
+DATABASE_URL=jdbc:postgresql://localhost:5432/peakpartner
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=postgres
+
+# === Production (Supabase + Render) ===
+# SPRING_PROFILES_ACTIVE=prod
+# DATABASE_URL=jdbc:postgresql://db.YOUR_PROJECT_REF.supabase.co:5432/postgres
+# DATABASE_USERNAME=postgres
+# DATABASE_PASSWORD=your-supabase-db-password
+
 SUPABASE_URL=your-supabase-url
 SUPABASE_ANON_KEY=your-supabase-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
