--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,8 @@
+# === Local Development ===
 VITE_API_URL=http://localhost:8080/api
+
+# === Production (set in Vercel dashboard) ===
+# VITE_API_URL=https://your-render-app.onrender.com/api
+
 VITE_SUPABASE_URL=your-supabase-url
 VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
