fix: concurrent access - increase pool size, cache auth, add DB constraints, pessimistic locking
- HikariCP pool: 3 → 10 (was exhausted by 1 user's 6-9 parallel API calls)
- Tomcat threads: capped at 30 (prod) to prevent thundering-herd DB starvation
- JwtAuthFilter: 60s profile cache eliminates 6-9 DB hits per dashboard load
- V7 migration: partial unique index on connections, exclusion constraints on sessions
- SessionBookingRepository: pessimistic locking (SELECT FOR UPDATE) on overlap checks
- SessionService/ConnectionService: handle DataIntegrityViolationException
- TrainerClientManage: tab-visibility aware polling (pause when hidden)

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -34,6 +34,10 @@ server:
   port: ${PORT:8080}
   servlet:
     context-path: /api
+  tomcat:
+    threads:
+      max: 50
+      min-spare: 5
 
 # Supabase Configuration
 supabase:
