--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -6,8 +6,8 @@ spring:
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASSWORD}
     hikari:
-      maximum-pool-size: 3
-      minimum-idle: 1
+      maximum-pool-size: 10
+      minimum-idle: 2
       # Generous timeouts for free-tier cold starts (Supabase DB can take 60s+ to wake)
       connection-timeout: 120000
       idle-timeout: 120000
@@ -43,6 +43,13 @@ spring:
     # Retry Flyway migration if DB isn't ready yet
     connect-retries: 5
     connect-retries-interval: 10
+
+server:
+  tomcat:
+    threads:
+      max: 30
+      min-spare: 5
+    connection-timeout: 30000
 
 logging:
   level:
